Fixed socket io behaviour, added votes ui.

--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,10 @@
             <p class="title"></p>
             <p class="votes"></p>
             <p class="close">X</p>
-            <img class="image" src="" alt="">
+            <img class="image" src="" alt="entrant decoration image">
+            <img class="thumb up" src="" alt="vote up">
+            <img class="thumb down" src="" alt="vote down">
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
